# dataengweekly-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
dataengweekly_analysis/: app.py  bitly.py  data_path.py  extractor.py  ngram_analysis.py
dataengweekly_analysis/data/: content_extractor1.json  content_extractor2.json  content_extractor3.json  country.csv  country_metrics.json  domain.json  domain_extractor.json  top3_links.json  url_extractor1.json  url_extractor2.json
tests/: bitly_test.py  ngram_analysis_test.py
