[tool.poetry]
name = "dataengweekly-analysis"
version = "0.1.0"
description = ""
authors = ["Ananth Packkildurai <adurai.tech@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pyinstaller = "^4.0.0"
requests = "^2.26.0"
bs4 = "^0.0.1"
spacy = "^3.2.0"
yake = "^0.4.8"
aiostream = "^0.4.3"
streamlit = "^1.2.0"
streamlit-wordcloud = "^0.1.0"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
